Ignoring .env file

--- a/task-06/.env
+++ b/task-06/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN = 'MTE1OTUyNjUwMTgxODA0MDQ0Mg.GsW73t.clA1hBX6l4iKXBm1Jntu354ZrZJ2GIoYLA4sNo'
+BOT_TOKEN = 'MTE1OTUyNjUwMTgxODA0MDQ0Mg.GXVnqT.YDYlZrBl48Mo9pzKW11NFOnkshdZ89I2u9WurQ'
 BOT_LINK = 'https://discord.com/api/oauth2/authorize?client_id=1159526501818040442&permissions=2183991392320&scope=bot'
